--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-. {
+* {
     font-family: "Open Sans", sans-serif;
 }
 
@@ -63,7 +63,7 @@
     display: flex;
     margin: 0 35px 0 200px;
     justify-content: space-between;
-
+    align-items: center;
 }
 
 .banner-content {
@@ -82,7 +82,7 @@
 
 .dsc {
     font-size: 15px;
-    width: 300;
+    font-weight: 300;
 }
 
 .button-box button {
